# flowr_root

./: pyproject.toml
flowr/predict/: predict_from_pdb.py
