[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flowr"
version = "0.1.0"
description = "FlowR: Flow Matching for Molecular Docking and Conformer Generation"
requires-python = ">=3.10"
dependencies = [
    "torch_geometric>=2.7.0",
    "tensordict>=0.10.0",
    "lmdb>=1.5.0",
    "pdbinf>=0.0.4",
    "posecheck>=1.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flowr*"]
